# AI_Workflow_Evaluator

./: .gitignore  PLAN.md  README.md  check-model.py  flawless_staff_eng.md  pyproject.toml  silent_failure.md
outputs/: build_process_eval.md  mock_transcripts_eval.md  mock_transcripts_eval_results.md
src/ai_eval_cli/: config.py
src/ai_eval_cli/cli/: dashboard.py  runner.py
src/ai_eval_cli/evaluation/: client.py  prompts.py  scoring.py
src/ai_eval_cli/ingestion/: __init__.py  base.py  json.py  markdown.py  raw_text.py
src/ai_eval_cli/schema/: evaluation.py
transcripts/mock_transcripts/: sample_transcript.md  stubborn_hallucination.md
transcripts/real_world_transcripts/: create_evaluation_plan.txt  gemini-chat.json  update_cli_ingestion.txt
